Enhance medication management by adding existence check and updating prescription view

--- a/Hospital/Backend/src/main/resources/database.properties
+++ b/Hospital/Backend/src/main/resources/database.properties
@@ -2,5 +2,5 @@ database_driver=com.mysql.cj.jdbc.Driver
 database_server=localhost
 database_port=3306
 database_user=root
-database_password=C@rlos2025!
+database_password=020704
 database_name=Hospital
